--- a/sim/Makefile
+++ b/sim/Makefile
@@ -12,12 +12,15 @@ all: clean lib build opt
 
 # build the bitbang library, needed for simulating a jtag bridge to OpenOCD
 build-deps:
+	@echo '************  original makefile build-deps ************'
 	$(MAKE) -C ../rtl/tb/remote_bitbang all
 
 clean-deps:
+	@echo '************  original makefile clean-deps ************'
 	$(MAKE) -C ../rtl/tb/remote_bitbang clean
 
 sim:
+	@echo '************  original makefile sim ************'
 	$(VSIM) -64 -gui vopt_tb -L models_lib -L vip_lib \
 		-suppress vsim-3009 -suppress vsim-8683 \
 		+UVM_NO_RELNOTES -stats -t ps \
@@ -25,6 +28,7 @@ sim:
 		-do "set StdArithNoWarnings 1; set NumericStdNoWarnings 1"
 
 simc:
+	@echo '************  original makefile simc ************'
 	$(VSIM) -64 -c vopt_tb -L models_lib -L vip_lib \
 		-suppress vsim-3009 -suppress vsim-8683 \
 		+UVM_NO_RELNOTES -stats -t ps \
@@ -34,16 +38,20 @@ simc:
 		-do "quit -code [examine -radix decimal sim:/tb_pulp/exit_status]"
 
 opt:
+	@echo '************  original makefile opt ************'
 	$(mkfile_path)/tcl_files/rtl_vopt.tcl
 
 build: build-deps
-	@make --no-print-directory -f $(mkfile_path)/vcompile/ips.mk build
-	@make --no-print-directory -f $(mkfile_path)/vcompile/rtl.mk build
+	@echo '************  original makefile build ************'
+	@make --no-print-directory -f $(mkfile_path)/vcompile/build.mk build
+	#@make --no-print-directory -f $(mkfile_path)/vcompile/rtl.mk build
 
 lib:
-	@make --no-print-directory -f $(mkfile_path)/vcompile/ips.mk lib
-	@make --no-print-directory -f $(mkfile_path)/vcompile/rtl.mk lib
+	@echo '************  original makefile lib ************'
+	@make --no-print-directory -f $(mkfile_path)/vcompile/build.mk lib
+	#@make --no-print-directory -f $(mkfile_path)/vcompile/rtl.mk lib
 
 clean: clean-deps
-	@make --no-print-directory -f $(mkfile_path)/vcompile/ips.mk clean
-	@make --no-print-directory -f $(mkfile_path)/vcompile/rtl.mk clean
+	@echo '************  original makefile clean ************'
+	@make --no-print-directory -f $(mkfile_path)/vcompile/build.mk clean
+	#@make --no-print-directory -f $(mkfile_path)/vcompile/rtl.mk clean
