--- a/rtl/udma/udma_ethernet/src_files.yml
+++ b/rtl/udma/udma_ethernet/src_files.yml
@@ -16,4 +16,6 @@ udma_ethernet:
     rtl/rgmii_phy_if.sv,
     rtl/rgmii_soc.sv,
     rtl/ssio_ddr_in.sv,
+    rtl/udma_ethernet.sv,
+    rtl/udma_ethernet_reg_if.sv,
   ]
