--- a/rtl/udma/udma_ethernet/src_files.yml
+++ b/rtl/udma/udma_ethernet/src_files.yml
@@ -20,4 +20,6 @@ udma_ethernet:
     rtl/udma_ethernet_reg_if.sv,
     rtl/eth_axis_rx_buffer.sv,
     rtl/eth_axis_tx_buffer.sv,
+    rtl/udma_eth_tx_controller.sv,
+    rtl/udma_eth_rx_controller.sv,
   ]
