--- a/rtl_list.yml
+++ b/rtl_list.yml
@@ -61,6 +61,8 @@ udma/udma_uart:
   path: udma/udma_uart
 udma/udma_i2c:
   path: udma/udma_i2c
+udma/udma_smi:
+  path: udma/udma_smi  
 udma/udma_i2s:
   path: udma/udma_i2s
 udma/udma_qspi:
